# agentic-workflow-blog

./: .gitignore  CALCULATOR.md  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: README.md  devcontainer.json
.github/agents/: README.md  develop-agent.md  document-agent.md  review-agent.md  test-agent.md  workflow-architecture.md  workflow-example.md  workflow-orchestrator.md
src/: README.md  __init__.py  calculator.py
src/operations/: __init__.py  addition.py  division.py  multiplication.py  subtraction.py
tests/: __init__.py  test_calculator.py
